# repro-evidence-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  sandbox-sarif.yml
docs/: claim-boundaries.md  cli-exit-codes.md  cli.md  design-principles.md  evidence-bundle-format.md  external-review-ledger.md  github-actions.md  maintainer-workflow.md  publishing.md  release-checklist.md  release-pypi-evidence.md  signed-bundles.md  signer-trust-policy.md  tutorial.md  use-cases.md  why-not-just.md
examples/: evidence-bundle.yaml
examples/dummy-binary/: notes.txt
examples/signed-bundle/: README.md
schemas/: manifest.schema.json  signature-sidecar.schema.json
scripts/: check_dist.py  generate_fixtures.py  release_install_smoke.py  smoke_examples.py
src/repro_evidence_kit/: __init__.py  cli.py  evidence.py  key_resolver.py  manifest.py  policy_signing.py  policy_verification.py  signing.py  trust_policy.py  verify.py
src/repro_evidence_kit/schemas/: evidence-bundle.schema.json  manifest.schema.json  sandbox-sarif.schema.json  trust-policy.schema.json
tests/: test_cli.py  test_evidence.py  test_key_resolver.py  test_manifest.py  test_policy_signing.py  test_policy_verification.py  test_readme_commands.py  test_signing.py  test_trust_policy.py  test_verify.py
