[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "repro-evidence-kit"
dynamic = ["version"]
description = "Reproducible artifact manifests, sandbox-output verification, and evidence-bundle validation."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "xodnr927-byte" }]
keywords = ["reproducibility", "artifact", "manifest", "sha256", "evidence", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "jsonschema>=4.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
  "types-PyYAML>=6.0",
]
schema = ["jsonschema>=4.0"]

[project.scripts]
repro-evidence = "repro_evidence_kit.cli:main"

[project.urls]
Homepage = "https://github.com/xodnr927-byte/repro-evidence-kit"
Documentation = "https://github.com/xodnr927-byte/repro-evidence-kit/tree/main/docs"
Source = "https://github.com/xodnr927-byte/repro-evidence-kit"
Changelog = "https://github.com/xodnr927-byte/repro-evidence-kit/blob/main/CHANGELOG.md"
Issues = "https://github.com/xodnr927-byte/repro-evidence-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/repro_evidence_kit"]

[tool.hatch.version]
path = "src/repro_evidence_kit/__init__.py"

[tool.coverage.run]
branch = true
source = ["repro_evidence_kit"]

[tool.coverage.report]
fail_under = 88
show_missing = true

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 160
